<resources>
    <string name="app_name">Travel</string>

    <!--Màn hình chính-->
    <string name="danh_sach_dia_diem">Danh sách địa điểm</string>
    <string name="them_dia_diem">Thêm địa điểm</string>
    <string name="them_tinh">Thêm tỉnh thành</string>
    <string name="tim_kiem">Tìm kiếm địa điểm</string>
    <string name="thoat">Thoát</string>
    <string name="luuy">Lưu ý: Bạn nên bật Internet và GPS để được tương tác tốt hơn</string>

    <!--key API Map-->
    <string name="map_api_key">AIzaSyCMaWtlKC4oWYsEwgMdQvcOUCjLf72SxgI</string>

    <!--Danh sách địa điểm-->
    <string name="chon_tinh"><u>Chọn tỉnh:</u></string>

    <!--Thêm địa điểm-->
    <string name="them">Thêm địa điểm</string>
    <string name="ten_dia_diem">Tên địa điểm:</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="anh">Ảnh:</string>
    <string name="gioi_thieu">Giới thiệu:</string>
    <string name="toa_do_ban_do">Tọa độ bản đồ</string>
    <string name="them_moi">Thêm</string>

    <!--Sửa địa điểm-->
    <string name="sua_dia_diem">Sửa địa điểm</string>
    <string name="luu_y_sua">(Chỉ được sửa tên, giới thiệu, hình)</string>
    <string name="sua">Sửa</string>

    <string-array name="arrayTinhThanh">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>TP HCM</item>

    </string-array>
</resources>
