<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:textStyle="italic"
        android:textColor="#F00"
        android:text="@string/luuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnDanhSachDiaDiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/custom_button_press"
            android:text="@string/danh_sach_dia_diem" />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnThemDiaDiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_press"
            android:text="@string/them_dia_diem" />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnThemTinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_press"
            android:text="@string/them_tinh" />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnTimKiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_press"
            android:text="@string/tim_kiem" />
        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_press"
            android:text="@string/thoat" />
    </LinearLayout>



</LinearLayout>