<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tinhthanh"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".ThemDiaDiemActivity">

            <TextView
                android:textColor="#001eff"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:text="@string/sua_dia_diem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/chon_tinh"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <Spinner
                android:layout_weight="7"
                android:id="@+id/spTinhThanhEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"></Spinner>
        </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_weight="3"
                    android:text="@string/ten_dia_diem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edtTenDiaDiemEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:inputType="textCapWords" />
                <TextView
                    android:textColor="#F00"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="(*)"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_weight="3"
                    android:text="@string/dia_chi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edtDiaChiEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:enabled="false"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/anh"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:src="@drawable/no_images"
                    android:layout_weight="6"
                    android:id="@+id/imgHinhEdit"
                    android:layout_width="0dp"
                    android:layout_height="200dp" />
                <Button
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:id="@+id/btnLayAnhTuDTEdit"
                    android:text="..."
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_weight="3"
                    android:text="@string/gioi_thieu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:textSize="14sp"
                    android:id="@+id/edtGioiThieuEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:lines="5"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_weight="3"
                    android:text="@string/toa_do_ban_do"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <EditText
                    android:textSize="14sp"
                    android:enabled="false"
                    android:layout_weight="7"
                    android:id="@+id/edtViDoEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />



            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <EditText
                    android:textSize="14sp"
                    android:enabled="false"
                    android:layout_weight="7"
                    android:id="@+id/edtKinhDoEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
            <Button
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/sua"
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
